--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -274,6 +274,12 @@
             <h4 class="fragment">Can contribute to dependency hell</h4>
             <h4 class="fragment">A small change can result in N deployments</h4>
             <h4 class="fragment">Need to treated like libraries and not bags with code</h4>
+            <h4 class="fragment">Dangerous when business logic sneaks in</h4>
+        </section>
+
+        <section>
+            <h4>I need to consume REST API of another services. Do I create my own DTOs?</h4>
+            <h4 class="fragment">Yes.</h4>
         </section>
 
         <section>
