--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -43,13 +43,13 @@
         <section data-background-image="img/background.png">
             <h3>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h3>
             <h4>Owner/Independent Consultant @ 4Comprehension</h4>
-            <h4>WarsawJUG Leader</h4>
+            <h4>Fresh WarsawJUG Leader</h4>
             <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
             <br>
         </section>
 
         <section data-background-image="img/background.png">
-            <h2>Questions: http://sli.do</h2>
+            <h2>Questions: https://sli.do</h2>
             <h2>Code: #geecon</h2>
         </section>
 
