--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -104,7 +104,7 @@
 
         <section>
             <h4>Microservices: the Main Idea</h4>
-            <h3 class="fragment">Independence through Modularity</h3>
+            <h3 class="fragment">Enable scalability through independence and modularity</h3>
         </section>
 
         <section data-transition="fade">
