--- a/talks/index.html
+++ b/talks/index.html
@@ -35,13 +35,7 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
 
-    <tr>
-        <td>126.</td>
-        <td data-location="50.012639, 19.924074" data-place="Hotel Metropolo">JDD 2023</td>
-        <td><a href="https://jdd.org.pl">Embracing Microservices</a></td>
-        <td>24.10.2023</td>
-        <td>Cracow/Poland</td>
-    </tr>
+
 
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2023</td>
@@ -49,6 +43,22 @@
 
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
+    </tr>
+
+    <tr>
+        <td>127.</td>
+        <td data-location="50.012639, 19.924074" data-place="Hotel Metropolo">JDD 2023</td>
+        <td><a href="https://jdd.org.pl">"Co piszczy w Javie?" Discussion Panel</a></td>
+        <td>24.10.2023</td>
+        <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
+        <td>126.</td>
+        <td data-location="50.012639, 19.924074" data-place="Hotel Metropolo">JDD 2023</td>
+        <td><a href="https://jdd.org.pl">Embracing Microservices</a></td>
+        <td>24.10.2023</td>
+        <td>Cracow/Poland</td>
     </tr>
 
     <tr>
