--- a/talks/index.html
+++ b/talks/index.html
@@ -42,6 +42,14 @@
     </tr>
 
     <tr>
+        <td>128.</td>
+        <td data-location="52.22270422499571, 21.006949415482094" data-place="MiNI">YavaConf 2023</td>
+        <td><a href="http://yavaconf.com">Embracing Microservices</a></td>
+        <td>9.12.2023</td>
+        <td>Warsaw/Poland</td>
+    </tr>
+
+    <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
 
