--- a/talks/index.html
+++ b/talks/index.html
@@ -35,10 +35,19 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
 
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2024</td>
+    </tr>
+
+
 
 
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2023</td>
+    </tr>
+
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
 
     <tr>
@@ -47,10 +56,6 @@
         <td><a href="http://yavaconf.com">Embracing Microservices</a></td>
         <td>9.12.2023</td>
         <td>Warsaw/Poland</td>
-    </tr>
-
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
 
     <tr>
