--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -142,6 +142,10 @@
         </section>
 
         <section>
+            <img src="img/boat.png" width="50%"/>
+        </section>
+
+        <section>
             <h5>Do not ask about the max size, but when to split</h5>
         </section>
 
