--- a/talks/index.html
+++ b/talks/index.html
@@ -39,8 +39,13 @@
         <td style="background: #ffffff" colspan="5" align="center">2024</td>
     </tr>
 
-
-
+    <tr>
+        <td>129.</td>
+        <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2024</td>
+        <td><a href="https://2024.geecon.org">Embracing Microservices</a></td>
+        <td>15.05.2023</td>
+        <td>Cracow/Poland</td>
+    </tr>
 
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2023</td>
@@ -101,7 +106,7 @@
     <tr>
         <td>122.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2023</td>
-        <td><a href="https://2022.geecon.org">Maintain Social Distance this Spring</a></td>
+        <td><a href="https://2023.geecon.org">Maintain Social Distance this Spring</a></td>
         <td>19.04.2023</td>
         <td>Cracow/Poland</td>
     </tr>
