--- a/talks/index.html
+++ b/talks/index.html
@@ -40,11 +40,19 @@
     </tr>
 
     <tr>
-        <td>129.</td>
+        <td>130.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2024</td>
         <td><a href="https://2024.geecon.org">Embracing Microservices</a></td>
-        <td>15.05.2023</td>
+        <td>15.05.2024</td>
         <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
+        <td>129.</td>
+        <td data-location="51.24738520595246, 22.543708248686208" data-place="KUL">LublinJUG</td>
+        <td><a href="https://www.meetup.com/lublin-java-user-group/events/299094970/">Embracing Microservices</a></td>
+        <td>21.02.2024</td>
+        <td>Lublin/Poland</td>
     </tr>
 
     <tr>
