--- a/talks/index.html
+++ b/talks/index.html
@@ -40,11 +40,19 @@
     </tr>
 
     <tr>
-        <td>130.</td>
+        <td>131.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2024</td>
         <td><a href="https://2024.geecon.org">Embracing Microservices</a></td>
         <td>15.05.2024</td>
         <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
+        <td>130.</td>
+        <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">WDI 2024</td>
+        <td><a href="https://warszawskiedniinformatyki.pl/">Embracing Microservices</a></td>
+        <td>6.04.2024</td>
+        <td>Warsaw/Poland</td>
     </tr>
 
     <tr>
