--- a/talks/index.html
+++ b/talks/index.html
@@ -56,6 +56,10 @@
     </tr>
 
     <tr>
+        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
+    </tr>
+
+    <tr>
         <td>129.</td>
         <td data-location="51.24738520595246, 22.543708248686208" data-place="KUL">LublinJUG</td>
         <td><a href="https://www.meetup.com/lublin-java-user-group/events/299094970/">Embracing Microservices</a></td>
