--- a/talks/social-distance/index.html
+++ b/talks/social-distance/index.html
@@ -425,6 +425,10 @@
         </section>
 
         <section>
+            <img src="img/plain-sql.png" width="60%"/>
+        </section>
+
+        <section>
             <h3>SQL is complete and self-sufficient, too bad that not type-safe...</h3>
             <div class="fragment">
                 <pre><code data-trim="" style="font-size: 1em;line-height: 0.9; max-height: 90%">
