--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -147,6 +147,14 @@
         </section>
 
         <section>
+            <blockquote cite="'How Netflix Really Uses Java' by Paul Bakker" width="100%">
+                However, don't be fooled by the size of those microservices, because a lot of those so-called microservices at Netflix are a lot larger, just looking at the code base, than the big monoliths that I've worked at, at many other companies.
+            </blockquote>
+            <small>Paul Bakker,</small>
+            <small> source: <a href="https://www.infoq.com/presentations/netflix-java/">https://www.infoq.com/presentations/netflix-java/</a></small>
+        </section>
+
+        <section>
             <h5>Do not ask about the max size, but when to split</h5>
         </section>
 
