--- a/talks/index.html
+++ b/talks/index.html
@@ -40,7 +40,7 @@
     </tr>
 
     <tr>
-        <td>131.</td>
+        <td>132.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2024</td>
         <td><a href="https://2024.geecon.org">Embracing Microservices</a></td>
         <td>15.05.2024</td>
@@ -48,11 +48,19 @@
     </tr>
 
     <tr>
-        <td>130.</td>
+        <td>131.</td>
         <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">WDI 2024</td>
         <td><a href="https://warszawskiedniinformatyki.pl/">Embracing Microservices</a></td>
         <td>6.04.2024</td>
         <td>Warsaw/Poland</td>
+    </tr>
+
+    <tr>
+        <td>130.</td>
+        <td data-location="52.400185, 16.920849" data-place="Nowy Rynek">PoznańJUG</td>
+        <td><a href="https://www.meetup.com/pl-PL/poznan-java-user-group/events/299572243/">Embracing Microservices</a></td>
+        <td>13.03.2024</td>
+        <td>Poznań/Poland</td>
     </tr>
 
     <tr>
