--- a/talks/index.html
+++ b/talks/index.html
@@ -41,7 +41,7 @@
 
     <tr>
         <td>132.</td>
-        <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2024</td>
+        <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">GeeCON 2024</td>
         <td><a href="https://2024.geecon.org">Embracing Microservices</a></td>
         <td>15.05.2024</td>
         <td>Cracow/Poland</td>
