--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -38,6 +38,7 @@
             <h2>Embracing Microservices</h2>
             <h4><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h4>
             <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
+            <img class="fragment" src="img/embarrasing.png" width="60%"/>
         </section>
 
         <section>
