--- a/talks/index.html
+++ b/talks/index.html
@@ -55,16 +55,14 @@
         <td>Warsaw/Poland</td>
     </tr>
 
+    <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
+
     <tr>
         <td>130.</td>
         <td data-location="52.400185, 16.920849" data-place="Nowy Rynek">PoznańJUG</td>
         <td><a href="https://www.meetup.com/pl-PL/poznan-java-user-group/events/299572243/">Embracing Microservices</a></td>
         <td>13.03.2024</td>
         <td>Poznań/Poland</td>
-    </tr>
-
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
 
     <tr>
