--- a/talks/index.html
+++ b/talks/index.html
@@ -40,11 +40,19 @@
     </tr>
 
     <tr>
-        <td>132.</td>
+        <td>133.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">GeeCON 2024</td>
         <td><a href="https://2024.geecon.org">Embracing Microservices</a></td>
         <td>15.05.2024</td>
         <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
+        <td>132.</td>
+        <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">4Developers 2024</td>
+        <td><a href="https://4developers.org.pl/4developers-2024/">Embracing Microservices</a></td>
+        <td>16.04.2024</td>
+        <td>Warsaw/Poland</td>
     </tr>
 
     <tr>
