--- a/talks/index.html
+++ b/talks/index.html
@@ -1083,7 +1083,7 @@
     </tr>
     <tr>
         <td>5.</td>
-        <td data-location="52.238753,21.043570" data-place="PGE Narodowy">Kariera IT Warsaw 2016</td>
+        <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">Kariera IT Warsaw 2016</td>
         <td><a href="http://careercon.pl/konferencja/kariera-it-warszawa-05-03-2016/">Java Wars VIII: The
             FunctionAwakens</a></td>
         <td>05.03.2016</td>
