--- a/talks/index.html
+++ b/talks/index.html
@@ -39,6 +39,16 @@
         <td style="background: #ffffff" colspan="5" align="center">2024</td>
     </tr>
 
+
+    <tr>
+        <td>134.</td>
+<!--        TODO refine location-->
+        <td data-location="39.53626896291551, -104.88304811846882" data-place="Lone Tree">dev2next</td>
+        <td><a href="https://www.dev2next.com">Embracing Microservices</a></td>
+        <td>1.30.2024</td>
+        <td>Lone Tree/USA</td>
+    </tr>
+
     <tr>
         <td>133.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">GeeCON 2024</td>
