--- a/talks/index.html
+++ b/talks/index.html
@@ -39,6 +39,14 @@
         <td style="background: #ffffff" colspan="5" align="center">2024</td>
     </tr>
 
+    <tr>
+        <td>135.</td>
+        <td data-location="50.012639, 19.924074" data-place="Hotel Metropolo">JDD 2023</td>
+        <td><a href="https://jdd.org.pl">JEP 461: Breathing New Life into Java Stream API</a></td>
+        <td>22.10.2024</td>
+        <td>Cracow/Poland</td>
+    </tr>
+
 
     <tr>
         <td>134.</td>
