--- a/talks/index.html
+++ b/talks/index.html
@@ -57,9 +57,18 @@
         <!--        TODO refine location-->
         <td data-location="39.53626896291551, -104.88304811846882" data-place="Lone Tree">dev2next</td>
         <td><a href="https://www.dev2next.com">Embracing Microservices</a></td>
-        <td>1.30.2024</td>
+        <td>1.10.2024</td>
         <td>Lone Tree/USA</td>
     </tr>
+
+    <tr>
+        <td></td>
+        <td data-location="50.03827607851486, 22.00459989816584" data-place="Bristol">Craft-IT</td>
+        <td><a href="https://craft-it.pl">Embracing Microservices</a></td>
+        <td>25.05.2024</td>
+        <td>Rzeszów/Poland</td>
+    </tr>
+
 
     <tr>
         <td></td>
