--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -304,7 +304,7 @@
             <h4><a href="http://twitter.com/pivovarit">@pivovarit</a></h4>
             <small><a href="https://4comprehension.com">4comprehension.com</a></small>
             <br>
-            <img src="img/qrcode.png" width="30%"/>
+            <img src="img/wdi.png" width="80%"/>
             <br>
             <small><a href="https://pivovarit.github.io/talks/embracing-microservices">https://pivovarit.github.io/talks/embracing-microservices</a></small>
         </section>
