--- a/talks/index.html
+++ b/talks/index.html
@@ -54,11 +54,10 @@
 
     <tr>
         <td></td>
-        <!--        TODO refine location-->
-        <td data-location="39.53626896291551, -104.88304811846882" data-place="Lone Tree">dev2next</td>
+        <td data-location="39.54156776974858, -104.87029498578751" data-place="Denver Marriott South">dev2next</td>
         <td><a href="https://www.dev2next.com">Embracing Microservices</a></td>
         <td>1.10.2024</td>
-        <td>Lone Tree/USA</td>
+        <td>Denver/USA</td>
     </tr>
 
     <tr>
@@ -80,9 +79,26 @@
 
     <tr>
         <td></td>
+        <td data-location="51.24738520595246, 22.543708248686208" data-place="KUL">LDI 2024</td>
+        <td><a href="https://www.linkedin.com/company/lubelskie-dni-informatyki">Embracing Microservices</a></td>
+        <td>20.04.2024</td>
+        <td>Lublin/Poland</td>
+    </tr>
+
+    "Współpraca człowiek - AI, jak algorytmy będą kreować naszą rzeczywistość?"
+    <tr>
+        <td></td>
         <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">4Developers 2024</td>
         <td><a href="https://4developers.org.pl/4developers-2024/">Embracing Microservices</a></td>
         <td>16.04.2024</td>
+        <td>Warsaw/Poland</td>
+    </tr>
+
+    <tr>
+        <td></td>
+        <td data-location="52.23018544156033, 21.023449897930536" data-place="Warsaw Stock Exchange">Inspiring Solutions</td>
+        <td><a href="https://www.inspiringsolutions.pl">Discussion panel: "Cooperation between human and AI"</a></td>
+        <td>12.04.2024</td>
         <td>Warsaw/Poland</td>
     </tr>
 
