--- a/talks/index.html
+++ b/talks/index.html
@@ -1114,11 +1114,8 @@
     </tr>
     <tr>
         <td></td>
-        <td data-location="50.059208,19.943648" data-place="Holiday Inn Krakow City Centre">Kariera IT Cracow
-            2016
-        </td>
-        <td><a href="http://careercon.pl/en/conference/kariera-it-krakow-09-04-2016/">Java Wars VIII: The Function
-            Awakens</a></td>
+        <td data-location="50.059208,19.943648" data-place="Holiday Inn Krakow City Centre">Kariera IT Cracow 2016</td>
+        <td><a href="http://careercon.pl/en/conference/kariera-it-krakow-09-04-2016/">Java Wars VIII: The Function Awakens</a></td>
         <td>09.04.2016</td>
         <td>Cracow/Poland</td>
     </tr>
@@ -1131,11 +1128,8 @@
     </tr>
     <tr>
         <td></td>
-        <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">Kariera IT Warsaw
-            2016
-        </td>
-        <td><a href="http://careercon.pl/konferencja/kariera-it-warszawa-05-03-2016/">Java Wars VIII: The
-            FunctionAwakens</a></td>
+        <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">Kariera IT Warsaw 2016</td>
+        <td><a href="http://careercon.pl/konferencja/kariera-it-warszawa-05-03-2016/">Java Wars VIII: The Function Awakens</a></td>
         <td>05.03.2016</td>
         <td>Warsaw/Poland</td>
     </tr>
