--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -173,6 +173,13 @@
         </section>
 
         <section>
+            <blockquote cite="'Static Analysis at Scale: An Instagram Story' by Benjamin Woodruff" width="100%">
+                Our server app is a monolith, one big codebase of several million lines and a few thousand Django endpoints [1], all loaded up and served together. A few services have been split out of the monolith, but we don’t have any plans to aggressively break it up.
+            </blockquote>
+            <small><a href="https://instagram-engineering.com/static-analysis-at-scale-an-instagram-story-8f498ab71a0c">https://instagram-engineering.com/static-analysis-at-scale-an-instagram-story-8f498ab71a0c</a></small>
+        </section>
+
+        <section>
             <h3>Antipattern #2: Old Habits Die Hard</h3>
             <h5 class="fragment">Single version for all services</h5>
             <h5 class="fragment">All-or-nothing deployments</h5>
