--- a/talks/index.html
+++ b/talks/index.html
@@ -88,6 +88,14 @@
     <tr>
         <td></td>
         <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">4Developers 2024</td>
+        <td><a href="https://4developers.org.pl/4developers-2024/">Project Loom (improvised rescue live-coding session)</a></td>
+        <td>16.04.2024</td>
+        <td>Warsaw/Poland</td>
+    </tr>
+
+    <tr>
+        <td></td>
+        <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">4Developers 2024</td>
         <td><a href="https://4developers.org.pl/4developers-2024/">Embracing Microservices</a></td>
         <td>16.04.2024</td>
         <td>Warsaw/Poland</td>
