--- a/talks/index.html
+++ b/talks/index.html
@@ -85,10 +85,16 @@
         <td>Lublin/Poland</td>
     </tr>
 
+
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
+    </tr>
+
     <tr>
         <td></td>
         <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">4Developers 2024</td>
-        <td><a href="https://4developers.org.pl/4developers-2024/">Project Loom (improvised rescue live-coding session)</a></td>
+        <td><a href="https://4developers.org.pl/4developers-2024/">Project Loom (improvised rescue live-coding
+            session)</a></td>
         <td>16.04.2024</td>
         <td>Warsaw/Poland</td>
     </tr>
@@ -103,14 +109,12 @@
 
     <tr>
         <td></td>
-        <td data-location="52.23018544156033, 21.023449897930536" data-place="Warsaw Stock Exchange">Inspiring Solutions</td>
+        <td data-location="52.23018544156033, 21.023449897930536" data-place="Warsaw Stock Exchange">Inspiring
+            Solutions
+        </td>
         <td><a href="https://www.inspiringsolutions.pl">Discussion panel: "Cooperation between human and AI"</a></td>
         <td>12.04.2024</td>
         <td>Warsaw/Poland</td>
-    </tr>
-
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
 
     <tr>
@@ -1119,7 +1123,8 @@
     <tr>
         <td></td>
         <td data-location="50.059208,19.943648" data-place="Holiday Inn Krakow City Centre">Kariera IT Cracow 2016</td>
-        <td><a href="http://careercon.pl/en/conference/kariera-it-krakow-09-04-2016/">Java Wars VIII: The Function Awakens</a></td>
+        <td><a href="http://careercon.pl/en/conference/kariera-it-krakow-09-04-2016/">Java Wars VIII: The Function
+            Awakens</a></td>
         <td>09.04.2016</td>
         <td>Cracow/Poland</td>
     </tr>
@@ -1132,8 +1137,11 @@
     </tr>
     <tr>
         <td></td>
-        <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">Kariera IT Warsaw 2016</td>
-        <td><a href="http://careercon.pl/konferencja/kariera-it-warszawa-05-03-2016/">Java Wars VIII: The Function Awakens</a></td>
+        <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">Kariera IT Warsaw
+            2016
+        </td>
+        <td><a href="http://careercon.pl/konferencja/kariera-it-warszawa-05-03-2016/">Java Wars VIII: The Function
+            Awakens</a></td>
         <td>05.03.2016</td>
         <td>Warsaw/Poland</td>
     </tr>
