--- a/talks/index.html
+++ b/talks/index.html
@@ -22,7 +22,7 @@
 <body>
 
 <div id="map"></div>
-<table border="1" cellspacing="0" cellpadding="3">
+<table border="1" cellspacing="0" cellpadding="3" id="talksTable">
     <thead>
     <tr>
         <th></th>
@@ -1183,14 +1183,35 @@
     </tbody>
 </table>
 <script>
+    const yearParam = new URLSearchParams(window.location.search).get('year');
+    if (yearParam) {
+        const workshopsTable = document.getElementById('talksTable');
+        const rows = workshopsTable.getElementsByTagName('tr');
+
+        for (let i = 1; i < rows.length; i++) {
+            const row = rows[i];
+            const dateCell = row.getElementsByTagName('td')[3];
+
+            if (dateCell) {
+                const date = dateCell.textContent.trim();
+                if (date.substring(date.lastIndexOf('.') + 1).toString() !== yearParam) {
+                    row.style.display = 'none';
+                }
+            }
+        }
+    }
     document.addEventListener("DOMContentLoaded", function () {
         let rows = document.querySelectorAll("tbody#talks tr");
-        let seq = 1
+        let seq = 1;
         for (let i = rows.length - 1; i >= 0; i--) {
-            let firstCell = rows[i].querySelector("td:first-child");
-            if (firstCell && firstCell.textContent === "") {
-                firstCell.textContent = seq + ".";
-                seq++;
+            let row = rows[i];
+            // Check if the row is visible
+            if (row.style.display !== 'none') {
+                let firstCell = row.querySelector("td:first-child");
+                if (firstCell && firstCell.textContent === "") {
+                    firstCell.textContent = seq + ".";
+                    seq++;
+                }
             }
         }
     });
