--- a/talks/index.html
+++ b/talks/index.html
@@ -1201,8 +1201,11 @@
         }
     }
     document.addEventListener("DOMContentLoaded", function () {
+        let queryYear = new URLSearchParams(window.location.search).get('year');
+
         let rows = document.querySelectorAll("tbody#talks tr");
         let seq = 1;
+
         for (let i = rows.length - 1; i >= 0; i--) {
             let row = rows[i];
             // Check if the row is visible
@@ -1211,6 +1214,8 @@
                 if (firstCell && firstCell.textContent === "") {
                     firstCell.textContent = seq + ".";
                     seq++;
+                } else if (firstCell && firstCell.textContent !== queryYear) {
+                    row.style.display = 'none'
                 }
             }
         }
