--- a/talks/index.html
+++ b/talks/index.html
@@ -1240,7 +1240,7 @@
 <script src="index.js"></script>
 <script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCi4kCXAt5WEgr_4Zc7fmo_TrHM5PD-1z0&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCi4kCXAt5WEgr_4Zc7fmo_TrHM5PD-1z0&loading=async&callback=initMap">
 </script>
 
 </body>
