--- a/talks/index.html
+++ b/talks/index.html
@@ -100,9 +100,7 @@
 
     <tr>
         <td></td>
-        <td data-location="52.23018544156033, 21.023449897930536" data-place="Warsaw Stock Exchange">Inspiring
-            Solutions
-        </td>
+        <td data-location="52.23018544156033, 21.023449897930536" data-place="Warsaw Stock Exchange">Inspiring Solutions</td>
         <td><a href="https://www.inspiringsolutions.pl">Discussion panel: "Cooperation between human and AI"</a></td>
         <td>12.04.2024</td>
         <td>Warsaw/Poland</td>
@@ -294,8 +292,7 @@
     <tr>
         <td></td>
         <td data-location="41.40927967363553, 2.2197463141279963"
-            data-place="International Barcelona Convention Center">JBCNConf 2022
-        </td>
+            data-place="International Barcelona Convention Center">JBCNConf 2022</td>
         <td><a href="http://www.jbcnconf.com/2022/">CompletableFuture and its Quirks</a></td>
         <td>19.07.2022</td>
         <td>Barcelona/Spain</td>
@@ -336,8 +333,7 @@
 
     <tr>
         <td></td>
-        <td data-location="41.881066190676684, -87.63519375025176" data-place="IBM Conference Center">ChicagoJUG
-        </td>
+        <td data-location="41.881066190676684, -87.63519375025176" data-place="IBM Conference Center">ChicagoJUG</td>
         <td><a href="https://cjug.org">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
         <td>16.06.2022</td>
         <td>Chicago/USA</td>
@@ -345,8 +341,7 @@
 
     <tr>
         <td></td>
-        <td data-location="41.881066190676684, -87.63519375025176" data-place="IBM Conference Center">ChicagoJUG
-        </td>
+        <td data-location="41.881066190676684, -87.63519375025176" data-place="IBM Conference Center">ChicagoJUG</td>
         <td><a href="https://cjug.org">CompletableFuture and its Quirks</a></td>
         <td>16.06.2022</td>
         <td>Chicago/USA</td>
@@ -425,8 +420,7 @@
     <tr>
         <td></td>
         <td data-location="53.14310869846268, 18.130762337675296"
-            data-place="University of Sciences and Technology in Bydgoszcz">BydgoszczJUG
-        </td>
+            data-place="University of Sciences and Technology in Bydgoszcz">BydgoszczJUG</td>
         <td><a href="">Hazelcast: The Hitchhiker's Guide</a></td>
         <td>23.09.2021</td>
         <td>Bydgoszcz</td>
@@ -664,8 +658,7 @@
 
     <tr>
         <td></td>
-        <td data-location="50.849583, 4.364083" data-place="HE2B - ESI - Ecole Supérieure d'Informatique">BruJUG
-        </td>
+        <td data-location="50.849583, 4.364083" data-place="HE2B - ESI - Ecole Supérieure d'Informatique">BruJUG</td>
         <td><a href="https://www.meetup.com/BruJUG/">Fantastic Frameworks and How to Avoid Them</a></td>
         <td>04.06.2019</td>
         <td>Brussels/Belgium</td>
@@ -996,9 +989,7 @@
     </tr>
     <tr>
         <td></td>
-        <td data-location="50.433394,30.520315" data-place="National Sports Complex “Olympiyskiy”">BuildStuffUA
-            2016
-        </td>
+        <td data-location="50.433394,30.520315" data-place="National Sports Complex “Olympiyskiy”">BuildStuffUA 2016</td>
         <td><a href="http://www.buildstuff.com.ua/kiev/">Javaslang - Functional Java Done Right</a></td>
         <td>22.11.2016</td>
         <td>Kiev/Ukraine</td>
@@ -1090,8 +1081,7 @@
     </tr>
     <tr>
         <td></td>
-        <td data-location="53.448489,14.491266" data-place="West Pomeranian University of Technology">DevCrowd 2016
-        </td>
+        <td data-location="53.448489,14.491266" data-place="West Pomeranian University of Technology">DevCrowd 2016</td>
         <td><a href="http://devcrowd.pl">Java Wars VIII: The Function Awakens</a></td>
         <td>23.04.2016</td>
         <td>Szczecin/Poland</td>
