log country stats

--- a/talks/index.html
+++ b/talks/index.html
@@ -1161,6 +1161,21 @@
     </tr>
     </tbody>
 </table>
+
+<br>
+
+<table border="1" cellspacing="0" cellpadding="3" style="max-width: 400px;">
+    <thead>
+    <tr>
+        <th>Country</th>
+        <th>Talks</th>
+    </tr>
+    </thead>
+    <tbody id="statistics">
+    <!-- Statistics data will be populated dynamically -->
+    </tbody>
+</table>
+
 <script>
     const yearParam = new URLSearchParams(window.location.search).get('year');
     if (yearParam) {
