--- a/talks/index.html
+++ b/talks/index.html
@@ -22,7 +22,7 @@
 <body>
 
 <div id="map"></div>
-<table border="1" cellspacing="0" cellpadding="3" id="talksTable">
+<table id="talksTable">
     <thead>
     <tr>
         <th></th>
@@ -1164,7 +1164,7 @@
 
 <br>
 
-<table border="1" cellspacing="0" cellpadding="3" style="max-width: 400px;">
+<table style="max-width: 25%;">
     <thead>
     <tr>
         <th>Country</th>
