--- a/talks/index.html
+++ b/talks/index.html
@@ -715,14 +715,14 @@
     </tr>
     <tr>
         <td></td>
-        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">Stop J-Santa 2018</td>
+        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">J-Santa 2018</td>
         <td><a href="https://j-santa.pl">Discussion Panel: Architecture vs Technology</a></td>
         <td>08.12.2018</td>
         <td>Lublin/Poland</td>
     </tr>
     <tr>
         <td></td>
-        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">Stop J-Santa 2018</td>
+        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">J-Santa 2018</td>
         <td><a href="https://j-santa.pl">The Dark Side of Java 8</a></td>
         <td>08.12.2018</td>
         <td>Lublin/Poland</td>
