--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -120,6 +120,12 @@
         </section>
 
         <section>
+            <h4>Don't vendor-lock yourself, but if you do... call us.</h4>
+            <img src="img/quesma.png" width="70%"/><br>
+            <small><a href="quesma.com">quesma.com</a></small>
+        </section>
+
+        <section>
             <h4>You can have modularity without microservices</h4>
             <img class="fragment" src="img/monolith.png" width="40%"/>
             <h5 class="fragment">Naturally, you don't get all the benefits, but it's not a demanding investment</h5>
