--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -51,6 +51,11 @@
         </section>
 
         <section>
+            <h2>Questions? </h2>
+            <h3>sli.do #geecon</h3>
+        </section>
+
+        <section>
             <img src="img/snake.jpg" width="70%"/>
         </section>
 
@@ -298,9 +303,10 @@
         </section>
 
         <section>
-            <h4>I need to consume REST API of another service. Do I create my own DTOs?</h4>
-            <h4 class="fragment">Yes. You want to share contract and not Java classes</h4>
-            <h4 class="fragment">You get independence at the expense of writing boring code</h4>
+            <h3>REST API Contract as Java Classes</h3>
+            <h4 class="fragment">Classes are not contract DSLs, need to be interpreted, results can vary</h4>
+            <h4 class="fragment">DTOs-per-consumer is bulletproof, but requires a bit of boilerplate</h4>
+            <h4 class="fragment">records reduce that boilerplate to minimum</h4>
         </section>
 
         <section>
