--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -314,11 +314,16 @@
         </section>
 
         <section>
-            <h4>Thank You!</h4>
-            <h4><a href="http://twitter.com/pivovarit">@pivovarit</a></h4>
+            <h2>Thank You!</h2>
+            <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
             <small><a href="https://4comprehension.com">4comprehension.com</a></small>
             <br>
-            <img src="img/qrcode.png" width="40%"/>
+            <div>
+            <img src="img/qr-feedback.png" width="30%"/>
+                <h4>Feedback?</h4>
+            </div>
+            <br>
+            <br>
             <br>
             <small><a href="https://pivovarit.github.io/talks/embracing-microservices">https://pivovarit.github.io/talks/embracing-microservices</a></small>
         </section>
