Revert "itcraft feedback"
This reverts commit ff978ea6e92f07382d6fad5f2158b8526b98dc50.

--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -314,16 +314,11 @@
         </section>
 
         <section>
-            <h2>Thank You!</h2>
-            <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
+            <h4>Thank You!</h4>
+            <h4><a href="http://twitter.com/pivovarit">@pivovarit</a></h4>
             <small><a href="https://4comprehension.com">4comprehension.com</a></small>
             <br>
-            <div>
-            <img src="img/qr-feedback.png" width="30%"/>
-                <h4>Feedback?</h4>
-            </div>
-            <br>
-            <br>
+            <img src="img/qrcode.png" width="40%"/>
             <br>
             <small><a href="https://pivovarit.github.io/talks/embracing-microservices">https://pivovarit.github.io/talks/embracing-microservices</a></small>
         </section>
