--- a/talks/index.html
+++ b/talks/index.html
@@ -58,10 +58,18 @@
 
     <tr>
         <td></td>
+        <td data-location="52.20024017242721, 21.012849872489294" data-place="Visuality">Craft-IT</td>
+        <td><a href="https://www.meetup.com/pl-PL/nerdsclub/">Embracing Microservices</a></td>
+        <td>20.06.2024</td>
+        <td>Warsaw/Poland</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="50.03827607851486, 22.00459989816584" data-place="Bristol">Craft-IT</td>
         <td><a href="https://craft-it.pl">Embracing Microservices</a></td>
         <td>25.05.2024</td>
-        <td>Rzeszów/Poland</td>
+        <td>Rzeszow/Poland</td>
     </tr>
 
 
@@ -1063,7 +1071,7 @@
         <td><a href="http://careercon.pl/en/conference/kariera-it-rzeszow-18-06-2015/">Java Wars VIII: The Function
             Awakens</a></td>
         <td>18.06.2016</td>
-        <td>Rzeszow/Poland</td>
+        <td>Rzeszów/Poland</td>
     </tr>
     <tr>
         <td></td>
