--- a/talks/index.html
+++ b/talks/index.html
@@ -58,7 +58,7 @@
 
     <tr>
         <td></td>
-        <td data-location="52.20024017242721, 21.012849872489294" data-place="Visuality">Craft-IT</td>
+        <td data-location="52.20024017242721, 21.012849872489294" data-place="Visuality">Warsaw Ruby Users Group</td>
         <td><a href="https://www.meetup.com/pl-PL/nerdsclub/">Embracing Microservices</a></td>
         <td>20.06.2024</td>
         <td>Warsaw/Poland</td>
