--- a/talks/social-distance/index.html
+++ b/talks/social-distance/index.html
@@ -417,6 +417,13 @@
         </section>
 
         <section>
+            <img src="img/jpabug.png" width="45%"/>
+            <img src="img/jpabug2.png" width="45%"/>
+            <br>
+            <small>source: <a href="https://x.com/maciejwalkowiak/status/1798727759918997982">https://x.com/maciejwalkowiak/status/1798727759918997982</a></small>
+        </section>
+
+        <section>
             <h2>JPA Beyond Copy-Paste</h2>
             <img src="img/jakub_jpa.png" width="60%"/>
             <br>
