--- a/talks/what-could-java-dev-learn-from-go/index.html
+++ b/talks/what-could-java-dev-learn-from-go/index.html
@@ -35,7 +35,7 @@
 
     <div class="slides">
         <section>
-            <h2>Is There Anything Java Developers Could Learn... From Golang?</h2>
+            <h2>What Java Developers Could Learn... From Golang?</h2>
             <h4><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h4>
             <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
             <img class="fragment" src="img/embarrasing.png" width="60%"/>
