--- a/talks/index.html
+++ b/talks/index.html
@@ -58,6 +58,38 @@
 
     <tr>
         <td></td>
+        <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
+        <td><a href="http://www.jcrete.org"></a>Skill toys: yo-yo</td>
+        <td>24.07.2024</td>
+        <td>Kolymbari/Greece</td>
+    </tr>
+
+    <tr>
+        <td></td>
+        <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
+        <td><a href="http://www.jcrete.org"></a>Can Java Developer learn anything from Golang?</td>
+        <td>24.07.2024</td>
+        <td>Kolymbari/Greece</td>
+    </tr>
+
+    <tr>
+        <td></td>
+        <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
+        <td><a href="http://www.jcrete.org"></a>State of the Functional Programming in Java</td>
+        <td>23.07.2024</td>
+        <td>Kolymbari/Greece</td>
+    </tr>
+
+    <tr>
+        <td></td>
+        <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
+        <td><a href="http://www.jcrete.org"></a>Microservices: Lessons Learned</td>
+        <td>22.07.2024</td>
+        <td>Kolymbari/Greece</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="52.20024017242721, 21.012849872489294" data-place="Visuality">Warsaw Ruby Users Group</td>
         <td><a href="https://www.meetup.com/pl-PL/nerdsclub/">Embracing Microservices</a></td>
         <td>20.06.2024</td>
