--- a/talks/index.html
+++ b/talks/index.html
@@ -61,7 +61,7 @@
         <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
         <td><a href="http://www.jcrete.org"></a>Skill toys: yo-yo</td>
         <td>24.07.2024</td>
-        <td>Kolymbari/Greece</td>
+        <td>Kolymvari/Greece</td>
     </tr>
 
     <tr>
@@ -69,7 +69,7 @@
         <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
         <td><a href="http://www.jcrete.org"></a>Can Java Developer learn anything from Golang?</td>
         <td>24.07.2024</td>
-        <td>Kolymbari/Greece</td>
+        <td>Kolymvari/Greece</td>
     </tr>
 
     <tr>
@@ -77,7 +77,7 @@
         <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
         <td><a href="http://www.jcrete.org"></a>State of the Functional Programming in Java</td>
         <td>23.07.2024</td>
-        <td>Kolymbari/Greece</td>
+        <td>Kolymvari/Greece</td>
     </tr>
 
     <tr>
@@ -85,7 +85,7 @@
         <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
         <td><a href="http://www.jcrete.org"></a>Microservices: Lessons Learned</td>
         <td>22.07.2024</td>
-        <td>Kolymbari/Greece</td>
+        <td>Kolymvari/Greece</td>
     </tr>
 
     <tr>
@@ -669,7 +669,7 @@
         <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2019</td>
         <td><a href="http://www.jcrete.org">Scaling Leadership in "flat" organizations</a></td>
         <td>16.07.2019</td>
-        <td>Kolymbari/Greece</td>
+        <td>Kolymvari/Greece</td>
     </tr>
     <tr>
         <td></td>
@@ -951,7 +951,7 @@
         <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2017</td>
         <td><a href="http://www.jcrete.org">Functional Java - Discussion Panel</a></td>
         <td>17.07.2017</td>
-        <td>Kolymbari/Greece</td>
+        <td>Kolymvari/Greece</td>
     </tr>
     <tr>
         <td></td>
