--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -43,7 +43,7 @@
 
         <section>
             <h2>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h2>
-            <h4>Founding Engineer @ Quesma</h4>
+            <h4>Independent Consultant/Trainer</h4>
             <h4>Owner @ 4Comprehension</h4>
             <h4>WarsawJUG Leader</h4>
             <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
@@ -117,12 +117,6 @@
             <img src="img/loose-coupling.png" width="50%"/>
             <br>
             <small>source: <a href="https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/">https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/</a></small>
-        </section>
-
-        <section>
-            <h4>Don't vendor-lock yourself, but if you do... call us.</h4>
-            <img src="img/quesma.png" width="70%"/><br>
-            <small><a href="quesma.com">quesma.com</a></small>
         </section>
 
         <section>
