--- a/talks/index.html
+++ b/talks/index.html
@@ -42,7 +42,7 @@
     <tr>
         <td></td>
         <td data-location="50.012639, 19.924074" data-place="Hotel Metropolo">JDD 2024</td>
-        <td><a href="https://jdd.org.pl">JEP 461: Breathing New Life into Java Stream API</a></td>
+        <td><a href="https://jdd.org.pl">JEP 473: Breathing New Life into Java Stream API</a></td>
         <td>22.10.2024</td>
         <td>Cracow/Poland</td>
     </tr>
@@ -58,10 +58,10 @@
 
     <tr>
         <td></td>
-        <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
-        <td><a href="http://www.jcrete.org"></a>Skill toys: yo-yo</td>
-        <td>24.07.2024</td>
-        <td>Kolymvari/Greece</td>
+        <td data-location="52.23363895794495, 21.0019294111386" data-place="WFC">JEurope</td>
+        <td><a href="https://jeurope.pl">Virtual Threads in Action</a></td>
+        <td>12.09.2024</td>
+        <td>Warsaw/Poland</td>
     </tr>
 
     <tr>
