--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -44,8 +44,8 @@
         <section>
             <h2>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h2>
             <h4>Independent Consultant/Trainer</h4>
-            <h4>Owner @ 4Comprehension</h4>
             <h4>WarsawJUG Leader</h4>
+            <h4>Vavr Leader</h4>
             <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
             <br>
         </section>
